[tool.poetry]
name = "bettertest"
version = "0.1.98"
description = ""
authors = ["krrishdholakia <krrishdholakia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tenacity = "^8.2.2"
openai = "^0.27.2"
supabase = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
